adding openapi docs for delete and edit endpoint
