# src/main/resources/static/openapi.yaml
@@ -99,10 +99,87 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
+  /api/expense/delete:
+    post:
+      tags:
+        - Expense
+      summary: Delete Expense Entry
+      operationId: deleteExpense
+      parameters:
+        - name: expenseId
+          in: query
+          required: true
+          schema:
+            type: string
+            example: f24d6a1c-40cf-4215-aa67-7e3a61b19cc7
+      responses:
+        '200':
+          description: Expense Deleted
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Expense Created"
+        '404':
+          description: Expense Entry Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: User is not authorized to access this entry
+          'content':
+            'application/json':
+              'schema':
+                $ref: '#/components/schemas/ErrorResponse'
+  /api/expense/edit:
+    post:
+      tags:
+        - Expense
+      summary: Edit existing Expense Entry
+      operationId: editExpense
+      parameters:
+        - name: expenseId
+          in: query
+          required: true
+          schema:
+            type: string
+            example: f24d6a1c-40cf-4215-aa67-7e3a61b19cc7
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExpenseDetails'
+      responses:
+        '200':
+          description: Expense Edited Successful
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Expense Created"
+        '404':
+          description: Expense Entry Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: User is not authorized to access this entry
+          'content':
+            'application/json':
+              'schema':
+                $ref: '#/components/schemas/ErrorResponse'
+        '400':
+          description: Bad request
+          'content':
+            'application/json':
+              'schema':
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
-    ExpenseCreation:
+    ExpenseDetails:
       type: object
       required:
         - amount
